<resources>
    <string name="app_name">Interact App</string>
    <string name="title_text">Oak Ridge High School</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="interact">Interact</string>
    <string name="messageplease">Please use your ORHS Google Account</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Info -->
    <string name="description">Interact is a service club for young people in Oak Ridge who want to join together to tackle the issues in their community that they care most about. Through Interact, you can carry out hands-on service projects, make new connections, develop leadership skills, and have fun!</string>
    <string name="design">This app was designed by the Oak Ridge Web and App Development Club in 2015.</string>
</resources>